Environement OK, Routing OK, FW LOGs KO

--- a/firewall/Dockerfile
+++ b/firewall/Dockerfile
@@ -1,5 +1,6 @@
-FROM debian:latest
-RUN apt-get update && apt-get install -y iptables iproute2
+FROM debian
+RUN apt-get update && apt-get install -y iptables procps ulogd2 && apt-get clean
 COPY firewall.sh /firewall.sh
+RUN ls -l /
 RUN chmod +x /firewall.sh
 ENTRYPOINT ["/firewall.sh"]
