--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,3 +1,3 @@
 FROM alpine
-RUN apk add --no-cache curl iproute2
-CMD ["sh", "-c", "ip route add default via 192.168.1.1"]
+RUN apk add --no-cache iproute2 iputils
+CMD sh -c "ip route del default && ip route add default via 172.18.0.100; exec ping 8.8.8.8"
